@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-08T08:26:14Z",
-  "count_outdated" : 29,
-  "uniques_outdated" : 5,
+  "timestamp" : "2022-05-17T16:36:12Z",
+  "count_outdated" : 30,
+  "uniques_outdated" : 6,
   "count" : 35,
   "uniques" : 7,
   "views" : [
-    {
-      "timestamp": "2022-05-03T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-08T00:00:00Z",
       "count": 5,
