@@ -1,12 +1,7 @@
 {
-  "count": 6,
-  "uniques": 2,
+  "count": 5,
+  "uniques": 1,
   "views": [
-    {
-      "timestamp": "2022-05-03T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-08T00:00:00Z",
       "count": 5,
