@@ -1,3 +1,10 @@
+2022-05-17T16:36:12Z:
+* notice: last 14d: all unq: 5 1
+* notice: prev accum: outdated-all outdated-unq / all unq: 29 5 / 35 7
+* notice: next accum: outdated-all outdated-unq / all unq: 30 6 / 35 7
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: changed dates: []
+
 2022-05-08T08:26:14Z:
 * notice: last 14d: all unq: 6 2
 * notice: prev accum: outdated-all outdated-unq / all unq: 29 5 / 30 6
